js262/test/language/module-code/parse-err-decl-pos-export-object-gen-method.js


/*---
description: Expression cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
features: [generators]
---*/

$DONOTEVALUATE();

({ *m() { export default null; } });
